--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -199,7 +199,7 @@
         display:none;
       }
       #githubLinkResponsive {
-        margin: 18px 0 0 0;
+        margin: 18px 0 0 0 !important;
         display:block;
       }
       a.icon {
