--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,6 +22,14 @@
       color: #333 !important;
       background: whitesmoke !important;
     }
+     
+    .wrapper {
+      max-width: 980px !important;
+    }
+     
+    .wrapper section {
+      max-width: 980px !important;
+    }
 
     a {
       color: #007eb9 !important;
