--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -8,6 +8,11 @@
 
 		<div class="section">
 			<div class="container">
+				<div class="github-edit-link">
+					<a title="Edit this page on github" class="_1wURw" target="_blank" rel="noopener noreferrer" href="https://github.com/serverless/serverless/edit/master/docs/providers/aws/guide/credentials.md">
+						<span class="">Edit this page</span> 
+					</a>				
+				</div>
 				<div class="row">
 					<div class="col-md-7">
 						<div class="content">
@@ -21,7 +26,6 @@
 							</div><!-- /.sections-list -->
 							<div class='list-all'></div>
 						</div>
-
 					</div><!-- /.col -->
 				</div><!-- /.row -->
 			</div><!-- /.container -->
