--- a/docs/amplify-theme/_sass/components/_callout.scss
+++ b/docs/amplify-theme/_sass/components/_callout.scss
@@ -4,7 +4,8 @@
 
 /* ----- General ----- */
 .callout {
-	border: 2px solid darken($color-callout, 4%);
+	border: 1px solid darken($color-callout, 4%);
+	border-radius: 5px;
 	background-color: $color-callout;
 	padding: .9375rem 1.25rem .625rem 1.25rem;
 	margin: 0 0 1.25rem 0;
@@ -27,10 +28,75 @@
 		font-weight: 500;
 		margin-bottom: .625rem;
 	}
+
+
 }
 
 /* ----- Variations ----- */
 .callout {
+	&--success {
+		background-color: $color-callout-success;
+		border-color: darken($color-callout-success, 6%);
+
+		strong {
+			color: darken($color-callout-success, 82%);
+		}
+	}
+
+	&--info {
+		background-color: $color-callout-info;
+		border-color: darken($color-callout-info, 4%);
+
+		strong {
+			color: darken($color-callout-info, 82%);
+		}
+
+		a {
+			border-bottom-color: blue;
+		}
+	}
+
+	&--warning {
+		background-color: $color-callout-warning;
+		border-color: darken($color-callout-warning, 10%);
+
+		strong {
+			color: darken($color-callout-warning, 70%);
+		}
+
+		a {
+			border-bottom-color: red;
+		}
+	}
+
+	&--danger {
+		background-color: $color-callout-danger;
+		border-color: darken($color-callout-danger, 4%);
+
+		strong {
+			color: darken($color-callout-danger, 70%);
+		}
+	}
+}
+
+
+
+/* ----- General ----- */
+.label {
+	background-color: $color-callout;
+	padding: .3rem .5rem .3rem .5rem;
+	text-decoration: none;
+	font-size: .75rem;
+	font-style: normal;   
+	border-width: 1px;
+	border-color:black;
+	border-style: solid;
+	border-radius: 4px;
+	font-weight: bold;
+}
+
+/* ----- Variations ----- */
+.label {
 	&--success {
 		background-color: $color-callout-success;
 		border-color: darken($color-callout-success, 6%);
@@ -55,6 +121,10 @@
 
 		strong {
 			color: darken($color-callout-warning, 70%);
+		}
+
+		a {
+			border-bottom-color: red;
 		}
 	}
 
