--- a/docs/amplify-theme/_sass/objects/_icons.scss
+++ b/docs/amplify-theme/_sass/objects/_icons.scss
@@ -275,3 +275,7 @@ h2.with-icon {
 .aws-icon-ps-60-file-box:before {
     background-position: -300px -540px;
 }
+
+.aws-icon-ps-60-bubble-gear:before {
+    background-position: -300px -450px;
+}
