--- a/docs/amplify-theme/assets/css/style.scss
+++ b/docs/amplify-theme/assets/css/style.scss
@@ -52,6 +52,7 @@
 @import 'components/site-header';
 @import 'components/social-list';
 @import 'components/title-anchor-link';
+@import 'components/_tabs';
 
 /* ----- Themes ----- */
 @import 'themes/green';
