--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -9,7 +9,8 @@
 		<div class="section">
 			<div class="container">
 				<div class="github-edit-link">
-					<a title="Edit this page on github" class="_1wURw" target="_blank" rel="noopener noreferrer" href="https://github.com/serverless/serverless/edit/master/docs/providers/aws/guide/credentials.md">
+					<a title="Edit this page on github" class="_1wURw" target="_blank" rel="noopener noreferrer" 
+					href="{{ site.github_docs_repo_url }}{{ page.path }}">
 						<span class="">Edit this page</span> 
 					</a>				
 				</div>
@@ -21,8 +22,27 @@
 					</div><!-- /.col -->
 					<div class="col-md-4 col-md-offset-1">
 						<div class="sections-list-wrapper">
-							<div class="sections-list js-sections js-affix js-scrollspy hidden-xs hidden-sm">
-									
+							<div class="sections-list js-affix js-scrollspy hidden-xs hidden-sm">
+								<div class="dev-guide">
+									{% if site.category_list %}
+										<ul class="level-1 nav">
+											{% for category in site.category_list %}
+												{% for item in category.subs %}
+													{% assign url = page.url | append: "index.html" %}
+													{% if url == item.url  %}
+														<div class='in-this-page js-sections'>
+															<div class='section-header'>{{ item.title }}</div>
+														</div>	
+													{% else %}
+														<li class="section-link" >
+															<a href="{{ item.url }}">{{ item.title }}</a>
+														</li>
+													{% endif %}	
+												{% endfor %}
+											{% endfor %}
+										</ul>
+									{% endif %}
+								</div>						
 							</div><!-- /.sections-list -->
 							<div class='list-all'></div>
 						</div>
