--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -34,6 +34,9 @@
 									</a>
 								</li>
 							{% endfor %}
+							<li class="site-search">
+								<a> <input placeholder="Search..." type="text" id='search-input'/> </a>
+							</li>
 						</ul><!-- /.site-header__nav -->
 						<button class="offcanvas-toggle visible-xs">
 							<span></span>
