--- a/docs/amplify-theme/_layouts/categories.html
+++ b/docs/amplify-theme/_layouts/categories.html
@@ -20,7 +20,7 @@
 										<span class="marketing-grid-item">
 											<div class="marketing-grid-content" data-mh>
 												<h1 class="marketing-grid__title"><b>{{ item.title }}</b></h1>
-												<p>{{ item.excerpt }}</p>
+												<h4>{{ item.excerpt }}</h4>
 											</div><!-- /.nav-grid__content -->
 										</span><!-- /.nav-grid__item -->
 									</div><!-- /.col -->
