--- a/docs/amplify-theme/_sass/_variables.scss
+++ b/docs/amplify-theme/_sass/_variables.scss
@@ -36,7 +36,7 @@ $color-callout-warning: #fffae9 !default;
 $color-callout-danger: #ffedeb !default;
 
 // Footer
-$color-footer-bg: #f5f5f5 !default;
+$color-footer-bg: white !default;
 $color-footer-copyright: #bdbdbd !default;
 
 // Social list
@@ -50,8 +50,8 @@ $color-theme-red: #FFECE6 !default;
 $color-theme-yellow: #FCFDE8 !default;
 
 /* ----- Font families ----- */
-$font-family-primary: 'Noto Sans', sans-serif !default;
-$font-family-secondary: 'Montserrat', sans-serif !default;
+$font-family-primary: '"Amazon Ember",Arial,sans-serif', sans-serif !default;
+$font-family-secondary: '"Amazon Ember",Arial,sans-serif', sans-serif !default;
 $font-family-monospace: 'Source Code Pro', monospace !default;
 
 /* ----- Font sizes ----- */
