--- a/docs/amplify-theme/_sass/components/_site-footer.scss
+++ b/docs/amplify-theme/_sass/components/_site-footer.scss
@@ -24,8 +24,9 @@
 
 	img {
 		display: block;
-		width: rem;
-		margin-top:5px;
+		width: 140px;
+		margin-top: 5px;
+		margin-left: -20px;
 	}
 }
 
