--- a/docs/amplify-theme/_sass/objects/_buttons.scss
+++ b/docs/amplify-theme/_sass/objects/_buttons.scss
@@ -23,7 +23,7 @@
 
 .btn--dark {
 	color: $color-white;
-	background-color: $color-dark-blue;
+	background-color: orange;
 	padding: .5625rem 1.5625rem;
 	transition: color .2s, background-color .2s;
 
