--- a/docs/amplify-theme/_sass/objects/_section.scss
+++ b/docs/amplify-theme/_sass/objects/_section.scss
@@ -27,7 +27,7 @@
 
 /* ----- Variations ----- */
 .section--darker-theme-color-bg {
-	background-color: darken($color-theme-blue, 3%);
+	background-color: #ececec;
 }
 
 .section--grey {
