--- a/docs/amplify-theme/_includes/site-head.html
+++ b/docs/amplify-theme/_includes/site-head.html
@@ -11,3 +11,4 @@
 <link rel="icon" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/favicon.ico" type="image/x-icon">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,500,500i,700,700i|Noto+Sans:400,400i,700,700i|Source+Code+Pro&amp;subset=latin-ext">
 <link rel="stylesheet" href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/amplify-theme/assets/css/style.css">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css" /> 
