--- a/docs/amplify-theme/_sass/components/_hero-subheader.scss
+++ b/docs/amplify-theme/_sass/components/_hero-subheader.scss
@@ -5,7 +5,6 @@
 /* ----- General ----- */
 .hero-subheader {
 	color: $color-dark-blue;
-	background-color: $color-theme-blue;
 	background-image: url("../images/layout/background.jpg");
 	padding: 3.75rem 0 (4.6875rem - 1.25rem) 0;
 	background-position: center;
@@ -71,4 +70,15 @@
 /* ----- More ----- */
 .hero-subheader__btn-more {
 	color: inherit;
+}
+
+
+.photo-credit {
+    font-size: 10px;
+    bottom: -340px;
+    left: 90%;
+    color: lightgray;
+    margin-top: -30px;
+    text-align: right;
+    padding-right: 30px;
 }
