--- a/docs/amplify-theme/_sass/components/_sections-list.scss
+++ b/docs/amplify-theme/_sass/components/_sections-list.scss
@@ -26,6 +26,13 @@
 
 /* ----- List ----- */
 .sections-list {
+
+	a.section-head {
+		font-weight: bold;
+		font-size: 17px;
+	}
+
+
 	ul {
 		ul {
 			margin-top: .625rem;
@@ -33,6 +40,7 @@
 		}
 
 		li {
+
 			margin-bottom: .625rem;
 			border-left: 1px solid #eee;
 			transition: border .2s;
@@ -41,15 +49,15 @@
 			padding-left:0px;
 
 			&.active {
-				border-left-color: $color-dark-blue;
+				border-left-color: black;
 			}
 
 			&.section-link {
 				a {
-					padding-left:0px;
+					padding-left:20px;
 				}
 			}
-
+			
 			&.has-submenu {
 				//padding-right: 1.25rem;
 				//font-weight: bold;
@@ -108,6 +116,7 @@
 					text-decoration: underline;
 				}
 			}
+
 		}
 	}
 }
