--- a/docs/amplify-theme/_sass/components/_site-header.scss
+++ b/docs/amplify-theme/_sass/components/_site-header.scss
@@ -6,10 +6,10 @@
 .site-header {
 	position: fixed;
 	width: 100%;
-	height:  5.625rem;
+	height:  3.5rem;
 	border-bottom: 1px solid rgba($color-dark-blue, .15);
 	z-index:999;
-	background-color:#E8F2FC;
+	background-color:white;
 }
 
 
@@ -19,9 +19,10 @@
 	display: block;
 	float: left;
 	color: $color-dark-blue;
-	font-family: $font-family-secondary;
-	font-size: 1.45em;
-	line-height: 5.625rem;
+	font-family: $font-family-primary;
+	font-size: 1.25em;
+	line-height: 3.625rem;
+	font-weight: 600;
 
 	&:hover,
 	&:focus,
@@ -31,7 +32,7 @@
 
 	img {
 		height: calc(2.25rem);
-		margin-top:25px;
+		margin-top:10px;
 	}
 }
 
@@ -53,17 +54,17 @@
 		display: block;
 		font-size: .875em;
 		font-weight: 500;
-		font-family: $font-family-secondary;
-		line-height: calc(5.625rem - 1px);
+		font-family: $font-family-primary;
+		line-height: calc(3.5rem - 1px);
 		text-transform: uppercase;
-		border-bottom: 1px solid;
+		border-bottom: 2px solid;
 		border-color: transparent;
 		transition: border-color .2s;
 
 		&:hover,
 		&:focus,
 		&:active {
-			border-color: $color-dark-blue;
+			border-color: orange;
 		}
 	}
 }
@@ -121,7 +122,7 @@
 
 /* ----- Offcanvas toggle ----- */
 .offcanvas-toggle {
-	height: calc(5.625rem - 1px);
+	height: calc(3.5rem - 1px);
 	width: 5.625rem;
 	cursor: pointer;
 	position: fixed;
@@ -129,6 +130,7 @@
 	top: 0;
 	@include translate3d(0, 0, 0);
 	z-index: $z-index-offcanvas-toggle;
+	margin-top: -12px;
 
 	span {
 		display: block;
