--- a/docs/amplify-theme/_sass/objects/_content.scss
+++ b/docs/amplify-theme/_sass/objects/_content.scss
@@ -25,12 +25,41 @@
 	}
 }
  
-.github-edit-link {
-	position: absolute;
-    margin-top: 50px;
-	right: 100px;
-	font-size:12px;
+
+
+
+/* ----- Small grid ----- */
+@media (min-width: $screen-sm-min) {
+	.github-edit-link {
+		display: none;
+	}
+	 
 }
+
+/* ----- Medium grid ----- */
+@media (min-width: $screen-md-min) {
+	.github-edit-link {
+		position: absolute;
+		margin-top: 50px;
+		right: 100px;
+		font-size:12px;
+		display: inherit;
+	}
+	
+}
+
+/* ----- Large grid ----- */
+@media (min-width: $screen-lg-min) {
+	.github-edit-link {
+		position: absolute;
+		margin-top: 50px;
+		right: 100px;
+		font-size:12px;
+		display: inherit;
+	}
+	
+}
+
 
 .sections-list-wrapper {
 	.dev-guide {
@@ -41,3 +70,25 @@
 		font-weight: bold;
 	}
 }
+
+.site-search {
+
+	#search-input {
+		vertical-align: middle !important;
+		border-radius: 20px;
+		border-width: 1px;
+		border-style:solid;
+		border-color:#d8d8d8;
+		padding:4px;
+		font-size: 15px;
+		padding-left:0px;
+		margin-top:-6px;
+		border: none;
+		outline: none;
+		cursor: pointer;
+		line-height: 0px;
+		
+	}
+}
+
+ 
