--- a/docs/amplify-theme/_includes/google-analytics.html
+++ b/docs/amplify-theme/_includes/google-analytics.html
@@ -1,11 +1,10 @@
-{% if jekyll.environment == "production" and site.amplify.google_analytics.tracking_code %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115615468-1"></script>
 <script>
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-	ga('create', '{{ site.amplify.google_analytics.tracking_code }}', 'auto');
-	ga('send', 'pageview');
+  gtag('config', 'UA-115615468-1');
 </script>
-{% endif %}
+
