--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -265,7 +265,7 @@
                   <a href="/aws-amplify/media/hub_guide.html">Hub</a>
                 </div>
             </div>
-            <a href="/aws-amplify/api/index.html" target="_blank">API</a>
+            <a href="/aws-amplify/api/" target="_blank">API</a>
         </div>
         </nav>
       </div><!-- end header -->
