--- a/docs/amplify-theme/_sass/objects/_content.scss
+++ b/docs/amplify-theme/_sass/objects/_content.scss
@@ -33,8 +33,14 @@
 	.github-edit-link {
 		display: none;
 	}
-	 
 }
+
+@media (min-width: $screen-xs-min) {
+	.github-edit-link {
+		display: none;
+	}
+}
+ 
 
 /* ----- Medium grid ----- */
 @media (min-width: $screen-md-min) {
