--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -16,14 +16,14 @@
 				</div>
 
 				{% if site.category_list %}
-						{% for category in site.category_list %}
-							{% for item in category.subs %}
-								{% assign url = page.url | append: "index.html" %}
-								{% if url == item.url  %}
-									{% assign isPageInCategories = true %}	
-								{% endif %}	
-							{% endfor %}
+					{% for category in site.category_list %}
+						{% for item in category.subs %}
+							{% assign urlHtml = page.url | append: ".html" %}
+							{% if page.url == item.url or urlHtml == item.url %}
+								{% assign isPageInCategories = true %}	
+							{% endif %}	
 						{% endfor %}
+					{% endfor %}
 				{% endif %}
 
 				<div class="row">
@@ -35,17 +35,17 @@
 					<div class="col-md-4 col-md-offset-1">
 						<div class="sections-list-wrapper">
 							<div class="sections-list js-affix js-scrollspy hidden-xs hidden-sm">
-								<div class="dev-guide">
+								<div class="dev-guide"> 
 									{% if site.category_list and isPageInCategories %}
 										<ul class="level-1 nav">
 											{% for category in site.category_list %}
 												{% for item in category.subs %}
-													{% assign url = page.url | append: "index.html" %}
-													{% if url == item.url  %}
+													{% assign urlHtml = page.url | append: "index.html" %}
+													{% if page.url == item.url or urlHtml == item.url  %}
 														<div class='in-this-page js-sections'></div>
 													{% else %}
 														<li class="section-link">
-															<a href="{{ item.url }}">{{ item.title }}</a>
+															<a href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}{{ item.url }}">{{ item.title }}</a>
 														</li>
 													{% endif %}	
 												{% endfor %}
