--- a/docs/amplify-theme/typedoc/partials/header.hbs
+++ b/docs/amplify-theme/typedoc/partials/header.hbs
@@ -38,7 +38,7 @@
                             <label class="tsd-widget" for="tsd-filter-only-exported">Only exported</label>
                         </div>
                     </div>
-                    <a href="/api/index.html#typedoc-main-index" class="tsd-widget menu no-caption">Menu</a>
+                    <a href="/api#typedoc-main-index" class="tsd-widget menu no-caption">Menu</a>
                 </div>
             </div>
         </div>
