--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -255,6 +255,7 @@
                 <a href="/aws-amplify/media/api_guide.html">API</a>
                 <a href="/aws-amplify/media/storage_guide.html">Storage</a>
                 <a href="/aws-amplify/media/cache_guide.html">Cache</a>
+                <a href="/aws-amplify/media/credentials_guide.html">Credentials</a>
               </div>
             </div>
             <div class="dropdown">
