--- a/docs/amplify-theme/_layouts/default.html
+++ b/docs/amplify-theme/_layouts/default.html
@@ -10,7 +10,7 @@
 			<div class="container">
 				<div class="github-edit-link">
 					<a title="Edit this page on github" class="" target="_blank" rel="noopener noreferrer" 
-					href="{{ site.github_docs_repo_url }}{{ page.path }}">
+					href="{{ site.github.repository_url }}{{ page.path }}">
 						<span class="">Edit this page</span> 
 					</a>				
 				</div>
