--- a/docs/amplify-theme/_sass/objects/_icons.scss
+++ b/docs/amplify-theme/_sass/objects/_icons.scss
@@ -260,6 +260,7 @@ h2.with-icon {
 	background-image: url(../images/icons/products_services_sprite_9182ebfe54f4fa0c8e7a5e67da3c85d4.png);
 }
 
+ 
 .aws-icon-ps-60-pie-bar-charts:before  {
 	background-position: -600px -420px;
 }
@@ -278,4 +279,8 @@ h2.with-icon {
 
 .aws-icon-ps-60-bubble-gear:before {
     background-position: -300px -450px;
+}
+
+.aws-icon-ps-60-circular-circuit:before {
+    background-position: -540px 0;
 }
