--- a/docs/amplify-theme/typedoc/partials/analytics.hbs
+++ b/docs/amplify-theme/typedoc/partials/analytics.hbs
@@ -1,11 +1,9 @@
-{{#if settings.gaID}}
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115615468-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-        ga('create', '{{settings.gaID}}', '{{settings.gaSite}}');
-        ga('send', 'pageview');
-    </script>
-{{/if}}
+  gtag('config', 'UA-115615468-1');
+</script>
