--- a/docs/amplify-theme/_sass/_variables.scss
+++ b/docs/amplify-theme/_sass/_variables.scss
@@ -50,8 +50,8 @@ $color-theme-red: #FFECE6 !default;
 $color-theme-yellow: #FCFDE8 !default;
 
 /* ----- Font families ----- */
-$font-family-primary: '"Amazon Ember",Arial,sans-serif', sans-serif !default;
-$font-family-secondary: '"Amazon Ember",Arial,sans-serif', sans-serif !default;
+$font-family-primary: 'Amazon Ember,Arial,sans-serif', sans-serif !default;
+$font-family-secondary: 'Amazon Ember,Arial,sans-serif', sans-serif !default;
 $font-family-monospace: 'Source Code Pro', monospace !default;
 
 /* ----- Font sizes ----- */
