Updated Analytics guide for Kinesis plugin

--- a/docs/amplify-theme/_sass/components/_sections-list.scss
+++ b/docs/amplify-theme/_sass/components/_sections-list.scss
@@ -33,6 +33,13 @@
 		font-size: 18px; 
 	}
 
+	.level-1 {
+		.in-this-page { 
+			ul:first-of-type {
+ 
+			}
+		}
+	}
 
 	ul {
 		ul {
@@ -42,8 +49,7 @@
 		}
 
 		li {
-
-			margin-bottom: .625rem;
+			padding-bottom: 2px;
 			border-left: 1px solid #eee;
 			transition: border .2s;
 			border-left-color:white;
@@ -51,7 +57,7 @@
 			padding-left:0px;
 
 			&.active {
-				border-left-color: black;
+				border-left-color: gray;
 			}
 
 			&.section-link {
@@ -122,6 +128,40 @@
 			}
 
 		}
+
+		.level-2 {
+			li {
+				&.active {
+					border-left-color: gray;
+					margin-left: -2px;
+					padding-left:0px;
+					border-width: 3px;
+				}
+			}
+		}
+
+		.level-3 {
+			li {
+				&.active {
+					border-left-color: #585858;
+					margin-left: -3px;
+					padding-left:0px;
+					border-width: 3px;
+				}
+			}
+		}
+
+		.level-4 {
+			li {
+				&.active {
+					border-left-color: black;
+					margin-left: -3px;
+					padding-left:0px;
+					border-width: 3px;
+				}
+			}
+		}
+
 	}
 }
 
