--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -65,11 +65,11 @@
 		</div><!-- /.container -->
 		<div class="row notification-bar">
 			<div class="col-xs-11">
-				🚀 Check out our new support for 
-				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/service_workers_guide?utm_source=web-workers&utm_campaign=notification-bar"
+				🚀 AWS Amplify supports sending analytics events to Amazon Kinesis streams.
+				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/analytics_guide?utm_source=launch_kinesis&utm_campaign=notification-bar#using-amazon-kinesis"
 					class="link-button">
-					Service Workers 
-				</a> to build high-quality PWAs.
+					➡️Learn More 
+				</a>
 			</div class="col-xs-1">
 			<div class="close-button">
 				<a href=''><i class="icon icon--x"></i></a>
