--- a/docs/amplify-theme/_includes/comments.html
+++ b/docs/amplify-theme/_includes/comments.html
@@ -10,6 +10,21 @@
 		this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
 	};
 	*/
+
+	// Adds the onNewComment callback to the disqus_config of the embed code
+	// that sends 'New Comment' events over to Google Analytics.
+	// The callback can also be used for any other analytics service like Parse.ly, Chartbeat, Mixpanel
+	var disqus_config = function() {
+			this.callbacks.onNewComment = [function(comment) {
+				ga('send', {
+					'hitType': 'event',            // Required.
+					'eventCategory': 'Comments',   // Required.
+					'eventAction': 'New Comment',  // Required.
+					'eventLabel': 'New Comment'
+				});
+			}];
+	};
+
 	(function() {
 		var d = document, s = d.createElement('script');
 
