--- a/docs/amplify-theme/_sass/objects/_icons.scss
+++ b/docs/amplify-theme/_sass/objects/_icons.scss
@@ -282,9 +282,15 @@ h2.with-icon {
 }
 
 .aws-icon-ps-60-bubble-gear:before {
-    background-position: -300px -450px;
+    background-position: -300px -440px;
 }
 
 .aws-icon-ps-60-circular-circuit:before {
     background-position: -540px 0;
 }
+
+.aws-icon-ps-60-device-message:before {
+    background-position: -84px -680px;
+}
+
+
