Interactions documentation update

--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -65,8 +65,8 @@
 		</div><!-- /.container -->
 		<div class="row notification-bar">
 			<div class="col-xs-11">
-				🚀 AWS Amplify supports sending analytics events to Amazon Kinesis streams.
-				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/analytics_guide?utm_source=launch_kinesis&utm_campaign=notification-bar#using-amazon-kinesis"
+				🚀 AWS Amplify supports AI-powered chatbots with new interactions category.
+				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/interactions_guide"
 					class="link-button">
 					➡️Learn More 
 				</a>
