Interactions documentation update

--- a/docs/amplify-theme/_includes/site-header.html
+++ b/docs/amplify-theme/_includes/site-header.html
@@ -65,7 +65,7 @@
 		</div><!-- /.container -->
 		<div class="row notification-bar">
 			<div class="col-xs-11">
-				🚀 AWS Amplify supports AI-powered chatbots with new interactions category.
+				🚀 AWS Amplify supports AI-powered chatbots with new Interactions category.
 				<a  href="{% if jekyll.environment == 'production' %}{{ site.amplify.baseurl }}{% endif %}/media/interactions_guide"
 					class="link-button">
 					➡️Learn More 
