--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -241,31 +241,31 @@
               <span>aws/aws-amplify</span>
             </a>
           <div id="topNav" class="navbar">
-            <a href="/aws-amplify/media/quick_start.html">Quick Start</a>
+            <a href="/amplify-js/media/quick_start.html">Quick Start</a>
             <a id="githubLink" href="{{ site.github.repository_url }}" target="_blank" class="aws-button" style="float:right;color:#333 !important;">
               <span>aws/aws-amplify</span>
             </a>
             <div class="dropdown">
               <a class="dropbtn">Developer Guides</a>
               <div class="dropdown-content">
-                <a href="/aws-amplify/media/install_n_config.html">Installation and Configuration</a>
-                <a href="/aws-amplify/media/authentication_guide.html">Authentication</a>
-                <a href="/aws-amplify/media/analytics_guide.html">Analytics</a>
-                <a href="/aws-amplify/media/push_notifications_setup.html">Push Notifications</a>
-                <a href="/aws-amplify/media/api_guide.html">API</a>
-                <a href="/aws-amplify/media/storage_guide.html">Storage</a>
-                <a href="/aws-amplify/media/cache_guide.html">Cache</a>
+                <a href="/amplify-js/media/install_n_config.html">Installation and Configuration</a>
+                <a href="/amplify-js/media/authentication_guide.html">Authentication</a>
+                <a href="/amplify-js/media/analytics_guide.html">Analytics</a>
+                <a href="/amplify-js/media/push_notifications_setup.html">Push Notifications</a>
+                <a href="/amplify-js/media/api_guide.html">API</a>
+                <a href="/amplify-js/media/storage_guide.html">Storage</a>
+                <a href="/amplify-js/media/cache_guide.html">Cache</a>
               </div>
             </div>
             <div class="dropdown">
               <a class="dropbtn">Utilities </a>
                 <div class="dropdown-content">
-                  <a href="/aws-amplify/media/i18n_guide.html">I18n</a>
-                  <a href="/aws-amplify/media/logger_guide.html">Logger</a>
-                  <a href="/aws-amplify/media/hub_guide.html">Hub</a>
+                  <a href="/amplify-js/media/i18n_guide.html">I18n</a>
+                  <a href="/amplify-js/media/logger_guide.html">Logger</a>
+                  <a href="/amplify-js/media/hub_guide.html">Hub</a>
                 </div>
             </div>
-            <a href="/aws-amplify/api/" target="_blank">API</a>
+            <a href="/amplify-js/api/" target="_blank">API</a>
         </div>
         </nav>
       </div><!-- end header -->
